# MMPR

./: .gitignore  CMakeLists.txt  Config.yaml  Frame.cpp  Frame.h  Header.h  Main.cpp  OpenMultiPR.sln  ParameterTuning.cpp  ParameterTuning.h  PointCloud.cpp  PointCloud.h  README.md  SequenceSearch.cpp  SequenceSearch.h  T3-T3_GG_flow.txt  VisualLocalization.cpp  VisualLocalization.h  build.sh  result.txt
Descriptors/: CMakeLists.txt  DescriptorExtraction.h  DescriptorFromFile.cpp  DescriptorGroup.h  DesriptorFromFile.h  DscGnssFile.cpp  DscGnssFile.h  FeatReader.cpp  FeatReader.h  FileInterface.h  GlobalConfig.cpp  GlobalConfig.h  GroundTruth.h  PicGnssFile.cpp  PicGnssFile.h
Descriptors/GIST/src/: standalone_image.cpp
Descriptors/LDB/: Ldb.cpp
FileInterface/: CMakeLists.txt  FileInterface.h  GlobalConfig.cpp  GroundTruth.h  PicGnssFile.cpp
OpenMultiPR/: Config.yaml  Header.h  KeyPositionMain.cpp  OpenMultiPR.vcxproj  OpenMultiPR.vcxproj.filters  SequenceSearch.h  T3-Lib_GG_flow.txt  VisualLocalization.cpp  compressIdx.txt  genetic.hpp  result.txt
OpenMultiPR/Descriptors/: DescriptorExtraction.cpp  DescriptorFromFile.cpp  DescriptorGroup.cpp  DesriptorFromFile.h
OpenMultiPR/Descriptors/CS/: CSOperation.cpp  CSOperation.h  CompressedSensingExample.cpp  CompressedSensingExample.h
OpenMultiPR/Descriptors/LDB/: Ldb.h
OpenMultiPR/FileInterface/: GlobalConfig.h  GroundTruth.cpp  PicGnssFile.h
OpenMultiPR/Tools/: GNSSDistance.cpp
Tools/: CMakeLists.txt  GNSSDistance.cpp  GNSSDistance.h  GlobalConfig.cpp  GlobalConfig.h  list_dir.cpp  timer.cpp
(+4 files in other folders)
